# finl_unicode

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.rs
benches/: categories.rs  grapheme_clusters.rs
generate-sources/: Cargo.toml
generate-sources/src/: main.rs
resources/: graphemes.txt
src/: categories.rs  grapheme_clusters.rs  lib.rs
src/data/: characters.rs  grapheme_property.rs  grapheme_test.rs
