[package]
name = "finl_unicode"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.56"

[dev-dependencies]
criterion = { version = "0.3.5", feature=["html_reports"]}
unicode_categories = "0.1.1"
finl_unicode = {path=".", features=["clusters", "categories"]}
unicode-segmentation = "1.9.0"
bstr = "0.2.17"

[features]
categories = []
clusters = []

[build-dependencies]
reqwest = {version="0.11.10", features=["blocking"] }
anyhow = "1.0.57"

#[[bench]]
#name = "categories"
#harness = false

[[bench]]
name = "grapheme_clusters"
harness = false