[package]
name = "finl_unicode"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["unicode", "segmentation", "graphemes"]
categories = ["text-processing", "internationalization"]

[dependencies]
anyhow = "1.0.5"

[dev-dependencies]
criterion = { version = "0.3.5", features=["html_reports"]}
unicode_categories = "0.1.1"
finl_unicode = {path=".", features=["grapheme_clusters", "categories"]}
unicode-segmentation = "1.9.0"
bstr = "0.2.17"

[features]
default = ["categories", "grapheme_clusters"]
categories = []
grapheme_clusters = []

[build-dependencies]
reqwest = {version="0.11.10", features=["blocking"] }
anyhow = "1.0.57"
itertools = "0.10.3"

[[bench]]
name = "categories"
harness = false

[[bench]]
name = "grapheme_clusters"
harness = false